--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ dist: xenial
 language: python
 python:
   - "3.7"
-# command to install dependencies
+
 install:
   - pip install -r requirements.txt
   - pip install .
-# command to run tests
+
 script: 
   - flake8
-    #  - pytest
+  - pytest
