--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ apiclient==1.0.4
 cachetools==3.1.0
 certifi==2019.3.9
 chardet==3.0.4
+flake8==3.7.7
 google-api-python-client==1.7.8
 google-auth==1.6.3
 google-auth-httplib2==0.0.3
